--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-notifier",
+  "name": "@ert78gb/angular-notifier",
   "description": "A well designed, fully animated, highly customizable, and easy-to-use notification library for your Angular application.",
-  "version": "14.0.0",
+  "version": "15.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
